# kv

./: Cargo.toml  Dockerfile  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
crates/solikv-cluster/: Cargo.toml
crates/solikv-cluster/src/: consistent_hash.rs  lib.rs  node.rs
crates/solikv-core/: Cargo.toml
crates/solikv-core/src/: bloom_ops.rs  expiry.rs  geo_ops.rs  hash_ops.rs  hll_ops.rs  keyspace.rs  lib.rs  list_ops.rs  set_ops.rs  store.rs  stream_ops.rs  string_ops.rs  types.rs  zset_ops.rs
crates/solikv-engine/: Cargo.toml
crates/solikv-engine/src/: dispatch.rs  lib.rs  lua.rs  response.rs  shard.rs
crates/solikv-persist/: Cargo.toml
crates/solikv-persist/src/: aof.rs  lib.rs  rdb.rs
crates/solikv-persist/src/redis_rdb/: intset.rs  listpack.rs  lzf.rs  mod.rs  parser.rs  ziplist.rs
crates/solikv-pubsub/: Cargo.toml
crates/solikv-pubsub/src/: broker.rs  lib.rs
crates/solikv-replication/: Cargo.toml
crates/solikv-replication/src/: crdt.rs  lib.rs  vector_clock.rs
crates/solikv-resp/: Cargo.toml
crates/solikv-resp/src/: codec.rs  connection.rs  lib.rs  parser.rs
crates/solikv-server/: Cargo.toml
crates/solikv-server/src/: lib.rs  main.rs  resp_server.rs  rest_server.rs
crates/solikv-server/tests/: integration.rs
scripts/: bench_compare.sh  bench_redis.sh
www/: README.md  app.infos  package-lock.json  tailwind.config.js
www/app/controllers/: CLAUDE.md  docs_controller.sl
www/app/views/docs/: CLAUDE.md  api.html.slv  benchmarks.html.slv  clustering.html.slv  commands.html.slv  getting_started.html.slv  index.html.slv  persistence.html.slv  tcp_protocol.html.slv
www/app/views/home/: index.html.slv
www/app/views/layouts/: CLAUDE.md  _docs_sidebar.html.slv  application.html.slv  docs.html.slv
www/config/: routes.sl
www/public/css/: application.css
