[package]
name = "solikv-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
ordered-float = { workspace = true }
crossbeam-skiplist = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
