[package]
name = "solikv-persist"
version = "0.1.0"
edition = "2021"

[dependencies]
solikv-core = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
lzf = "0.3"

[dev-dependencies]
tempfile = "3"
