[package]
name = "solikv-pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
glob-match = "0.2"
parking_lot = { workspace = true }

[dev-dependencies]
